<resources>
    <string name="app_name">FoSer</string>

    <!-- Main activity -->
    <string name="info_state"> Service state: </string>
    <string name="info_service_running">Service IS running...</string>
    <string name="info_service_not_running">Service is NOT running...</string>
    <string name="info_states"> Service action: </string>
    <string name="button_start">Start</string>
    <string name="button_restart">Restart</string>
    <string name="button_stop">Stop</string>

    <!-- Foreground service -->
    <string name="ser_title">FoSer!</string>
    <string name="ser_initial_info"> Service is just running...</string>

    <!-- Settings Activity Title -->
    <string name="service_settings_info">Service settings</string>
    <string name="label_settings">Settings</string>

    <!-- Main menu -->
    <string name="titleSettings">Settings</string>
    <string name="titleExit">Exit</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header"> Notification information</string>
    <string name="sync_header">Synchronization</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Message to show</string>
    <string name="reply_title">Display when</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Work periodicly</string>
    <string name="attachment_title">Two times slower</string>
    <string name="attachment_summary_on">Two times slower working frequency </string>
    <string name="attachment_summary_off">Two times slower operating frequency</string>

    <string name="attachment2_title">5 times slower</string>
    <string name="attachment2_summary_on"> 5 times slower working frequency </string>
    <string name="attachment2_summary_off">5 times slower operating frequency</string>

    <string name="attachment3_title">10 times slower</string>
    <string name="attachment3_summary_on">x10 times slower working frequency </string>
    <string name="attachment3_summary_off">10 times operating frequency</string>
</resources>