<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <!--<EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />-->
        <EditTextPreference
            app:icon="@drawable/circle"
            app:defaultValue="FoSer"
            app:key="message"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <!--<ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />-->

        <CheckBoxPreference
            app:key="show_time"
            app:summary="Yes/No"
            app:title="@string/reply_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="double"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="quintuple"
            app:summaryOff="@string/attachment2_summary_off"
            app:summaryOn="@string/attachment2_summary_on"
            app:title="@string/attachment2_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="decuple"
            app:summaryOff="@string/attachment3_summary_off"
            app:summaryOn="@string/attachment3_summary_on"
            app:title="@string/attachment3_title" />
    </PreferenceCategory>

</PreferenceScreen>